[package]
name = "tango_bridge"
description = "Tango ADB Desktop Application"
version = "0.3.0"
edition = "2021"

[package.metadata.winresource]
ProductName = "Tango ADB"
OriginalFilename = "tango-bridge.exe"
LegalCopyright = "Copyright © 2024-2025 Tango ADB"

[profile.release]
strip = true
lto = true
opt-level = "z"

[dependencies]
auto-launch = "0.5.0"
open = "5.1.3"
tokio = { version = "1.37.0", features = ["full"] }
futures-util = "0.3.30"
single-instance = "0.3.3"
reqwest = { version = "0.12.4", features = ["stream"] }
axum = { version = "0.8.1", features = ["macros", "ws", "tracing"] }
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.2.0"
tokio-util = "0.7.14"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
